Listing Runnables does not need ID but kind argument
